--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -74,6 +74,11 @@ body {
 .unos {
     background-color: var(--gray-color);
     padding: 188px 0;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7) url(/home/emihai/Desktop/GoITMarkupHomework/goit-markup-hw-04/images/heroimage.jpg));
+    max-width: 1440px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .unost {
@@ -295,6 +300,7 @@ body {
 
  .headerclass {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
  }
 
  .divclass {
