--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -74,7 +74,7 @@ body {
 .unos {
     background-color: var(--gray-color);
     padding: 188px 0;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7), url(images/heroimagecompressed.jpg));
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7), url(../images/heroimagecompressed.jpg));
     max-width: 1440px;
     background-repeat: no-repeat;
     background-position: center;
