--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -396,3 +396,13 @@ body {
     border: 1px solid #e7e9fc;
     border-top: none;
  }
+
+ .antennae {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    margin-bottom: 8px;
+ }
