--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -74,12 +74,18 @@ body {
 .unos {
     background-color: var(--gray-color);
     padding: 188px 0;
-    background-image: linear-gradient(rgba(46, 47, 66, 0. 7), rgba(46, 47, 66, 0.7)), url(../images/heroimage.jpg);
+    
+}
+
+.unos {
     max-width: 1440px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    background-image: url(../images/heroimage.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46,47,66,0.7));
 }
+
 
 .unost {
     font-size: 56px;
@@ -150,7 +156,10 @@ body {
     background-color: var(--mybackgroundcolor-background-color);
     width: calc((100%-72px)/4);
     border-radius: 0px 0px 4px 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    border-radius: 4px;
 }
+
 .quattroo {
     font-weight: 500;
     font-size: 20px;
@@ -405,4 +414,32 @@ body {
     background-color: #f4f4fd;
     border-radius: 4px;
     margin-bottom: 8px;
+ }
+
+ .social {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+ }
+ 
+ .socialnetwork {
+    width: 40px;
+    height: 40px;
+ }
+
+ .instagram {
+    width: 100%;
+    height: 100%;
+    background-color: var(--bluecolor-color);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+ }
+
+ .instagram:hover, .instagram:focus {
+    background-color: var(--darkblue-color);
+ }
+
+ .curry {
+    fill: var(--white-color);
  }
