--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -160,6 +160,10 @@ body {
     border-radius: 4px;
 }
 
+.quattroi {
+    border-radius: 4px;
+}
+
 .quattroo {
     font-weight: 500;
     font-size: 20px;
