--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -157,7 +157,7 @@ body {
     width: calc((100%-72px)/4);
     border-radius: 4px;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    border-radius: 4px;
+    border-radius: 0px 0px 4px 4px;
 }
 
 .quattroi {
@@ -438,6 +438,7 @@ body {
     border-radius: 50%;
     display: flex;
     align-items: center;
+    justify-content: center;
  }
 
  .instagram:hover, .instagram:focus {
