--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -565,3 +565,32 @@ align-items: baseline;
  .portfoliosvgclass {
    fill: var(--white-color);
  }
+
+ .garciasocial {
+   display: flex;
+   justify-content: center;
+   gap: 24px;
+ }
+
+ .garciamedia {
+   width: 40px;
+   height: 40px;
+ }
+
+ .camillag {
+   width: 100%;
+   height: 100%;
+   background-color: var(--bluecolor-color);
+   border-radius: 50%;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+ }
+
+ .camillag:hover, .camillag:focus {
+   background-color: #404bbf;
+ }
+
+ .camillagarciasocial {
+   fill: var(--white-color);
+ }
